
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 char* __progname ;
 int exit (int) ;
 int printf (char*,...) ;

void usage(void)
{
 printf("Usage: %s -i <interval> -p <port> -n <pkts> host1:port1 hostn:portn\n\n",
     __progname);

 printf("-i sets packet interval in milliseconds.\n");
 printf("   You can specify Nus for N microseconds, or Ns for N seconds.\n");
 printf("   Default is 0, which is good for multiple hosts and one packet.\n");
 printf("   If you want to send continuously, specify 1s or more, so as to not\n");
 printf("   cause DoS due to sheer traffic volume.\n\n");
 printf("-p sets the DEFAULT port (139 if not specified)\n\n");
 printf("-n determines how many packets to send to each target. Default is 1\n\n");
 printf("host:port combinations can be given as such; 207.46.130.108:80\n");
 printf("The port part of a target definition ovverrides the defaults.\n\n");
 printf("Hostnames will be resolved, if possible.\n");

 exit(1);
}
