; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/multiple/dos/extr_20810.c_usage.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/multiple/dos/extr_20810.c_usage.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [70 x i8] c"Usage: %s -i <interval> -p <port> -n <pkts> host1:port1 hostn:portn\0A\0A\00", align 1
@__progname = common dso_local global i8* null, align 8
@.str.1 = private unnamed_addr constant [42 x i8] c"-i sets packet interval in milliseconds.\0A\00", align 1
@.str.2 = private unnamed_addr constant [65 x i8] c"   You can specify Nus for N microseconds, or Ns for N seconds.\0A\00", align 1
@.str.3 = private unnamed_addr constant [67 x i8] c"   Default is 0, which is good for multiple hosts and one packet.\0A\00", align 1
@.str.4 = private unnamed_addr constant [71 x i8] c"   If you want to send continuously, specify 1s or more, so as to not\0A\00", align 1
@.str.5 = private unnamed_addr constant [44 x i8] c"   cause DoS due to sheer traffic volume.\0A\0A\00", align 1
@.str.6 = private unnamed_addr constant [50 x i8] c"-p sets the DEFAULT port (139 if not specified)\0A\0A\00", align 1
@.str.7 = private unnamed_addr constant [70 x i8] c"-n determines how many packets to send to each target. Default is 1\0A\0A\00", align 1
@.str.8 = private unnamed_addr constant [64 x i8] c"host:port combinations can be given as such; 207.46.130.108:80\0A\00", align 1
@.str.9 = private unnamed_addr constant [64 x i8] c"The port part of a target definition ovverrides the defaults.\0A\0A\00", align 1
@.str.10 = private unnamed_addr constant [42 x i8] c"Hostnames will be resolved, if possible.\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @usage() #0 {
  %1 = load i8*, i8** @__progname, align 8
  %2 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([70 x i8], [70 x i8]* @.str, i64 0, i64 0), i8* %1)
  %3 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([42 x i8], [42 x i8]* @.str.1, i64 0, i64 0))
  %4 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([65 x i8], [65 x i8]* @.str.2, i64 0, i64 0))
  %5 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([67 x i8], [67 x i8]* @.str.3, i64 0, i64 0))
  %6 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([71 x i8], [71 x i8]* @.str.4, i64 0, i64 0))
  %7 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([44 x i8], [44 x i8]* @.str.5, i64 0, i64 0))
  %8 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([50 x i8], [50 x i8]* @.str.6, i64 0, i64 0))
  %9 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([70 x i8], [70 x i8]* @.str.7, i64 0, i64 0))
  %10 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([64 x i8], [64 x i8]* @.str.8, i64 0, i64 0))
  %11 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([64 x i8], [64 x i8]* @.str.9, i64 0, i64 0))
  %12 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([42 x i8], [42 x i8]* @.str.10, i64 0, i64 0))
  %13 = call i32 @exit(i32 1) #3
  unreachable
}

declare dso_local i32 @printf(i8*, ...) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
